minor fix index

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите получить конкурентное преимущество в учебе, на работе или в бизнесе?</h2>
                     <p>Тем, кто жаждет выдающихся результатов, помогу раскрыть потенциал мозга, поделюсь инструментами и стратегиями эффективного обучения.</p>
-                    <a href="https://t.me/safronov4brain" target="_blank" class="btn btn-blue">
+                    <a href="http://telegram.p.smartexpert.net/safronov4brain" target="_blank" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -197,7 +197,7 @@
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="https://t.me/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="http://telegram.p.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
@@ -205,7 +205,7 @@
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="https://t.me/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="http://telegram.p.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
@@ -213,7 +213,7 @@
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="https://t.me/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="http://telegram.p.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
@@ -221,7 +221,7 @@
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="https://t.me/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="http://telegram.p.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -229,7 +229,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="https://t.me/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="http://telegram.p.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -486,7 +486,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/pVkWBRWTUEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <a href="#" class="btn btn-success">Да хочу!</a>
+                    <a href="http://telegram.p.smartexpert.net/safronov4brain" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
