--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/sec_my_projects/logo.jpg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -147,7 +147,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/sec_my_projects/product.svg" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/logo.jpg" alt="Generic placeholder image">
                     <div class="media-body">
                         <p class="card_subtitle">Консультирование, обучение, поддержка</p>
                         <h4 class="card_title">Проект «Все для личного бренда»</h4>
