--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите я стану вашим наставником и помогу вам создать доверительные отношения с вашим воспитанным и счастливым подростком? </h2>
                     <p>Я дам вам алгоритм взаимодействия с подростком при помощи которого вы воспитаете  уверенного в себе и счастливого человека.</p>
-                    <a href="#" class="btn btn-blue">
+                    <a href="https://www.facebook.com/vospitanies/" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -499,52 +499,12 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/kgkngWojnOM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <a href="#" class="btn btn-success">Да хочу!</a>
+                    <a href="https://www.facebook.com/vospitanies/" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- sec_12 -->
-  <!--  <section class="sec sec_12">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
-
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="#" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="#" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tw.svg" alt="tw"></a>
-                        <a href="#" class="item"><img src="img/soc_links/tg.svg" alt="tg"></a>
-                        <a href="#" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
