--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите получить конкурентное преимущество в учебе, на работе или в бизнесе?</h2>
                     <p>Тем, кто жаждет выдающихся результатов, помогу раскрыть потенциал мозга, поделюсь инструментами и стратегиями эффективного обучения.</p>
-                    <a href="http://telegram.p.smartexpert.net/safronov4brain" target="_blank" class="btn btn-blue">
+                    <a href="https://www.instagram.com/safronov4brain/" target="_blank" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
@@ -486,7 +486,7 @@
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://www.youtube.com/embed/pVkWBRWTUEs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <a href="http://telegram.p.smartexpert.net/safronov4brain" class="btn btn-success">Да хочу!</a>
+                    <a href="https://www.instagram.com/safronov4brain/" target="_blank" class="btn btn-success">Да хочу!</a>
                 </div>
             </div>
         </div>
