--- a/index.html
+++ b/index.html
@@ -511,19 +511,20 @@
                     </table>
                 </div>
                 <div class="col-md-6">
-                    <div class="soc_links_wrapp mx-md-auto">
-                        <a href="https://www.facebook.com/safronovlife" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
-                        <a href="https://vk.com/safronov4brain" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
-                    </div>
+                    
                 </div>
                 <div class="col-md-3">
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <select class="form-control" id="lang">
                             <option selected>Russian</option>
                             <option>Ukraine</option>
                             <option>Engish</option>
                         </select>
+                    </div> -->
+                    <div class="soc_links_wrapp mx-md-auto">
+                        <a href="https://www.facebook.com/safronovlife" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
+                        <a href="https://vk.com/safronov4brain" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
+                        <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
                     </div>
                 </div>
             </div>
