--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="http://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
@@ -205,7 +205,7 @@
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="http://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
@@ -213,7 +213,7 @@
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="http://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
@@ -221,7 +221,7 @@
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="http://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">5</th>
@@ -229,7 +229,7 @@
                                     <td>4</td>
                                     <td>0</td>
                                     <td>20</td>
-                                    <td class="text-right"><a href="http://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://telegram.smartexpert.net/AndreySafronovv" target="_blank" class="btn btn-blue">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
