--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_your_mentor/konstantin.png" alt="SE">
+                        <img src="img/sec_your_mentor/alla.png" alt="SE">
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img_wrapp">
-                        <img src="img/sec_1/konstantin.png" alt="SE">
+                        <img src="img/sec_1/alla.png" alt="SE">
                     </div>
                 </div>
             </div>
