--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -592,109 +592,6 @@
     </section>
     <!-- / sec_success_stories -->
 
-    <!-- sec_lesson_steps -->
-    <section class="sec sec_lesson_steps">
-        <div class="container">
-            <img class="abs_pic" src="img/sec_9/abs_pic.svg" alt="">
-            <div class="sec_title">
-                <img src="img/sec_9/title_label.svg" alt="title_label">
-                <h2>Как будет проходить ваше обучение?</h2>
-                <p>Вот, что говорят успешные онлайн предприниматели, известные <br> эксперты и авторы обучающих программ о нашем проекте</p>
-            </div>
-            <div class="sleder_wrapp row">
-                <span class="arrow-prev">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                          fill="#BDBDBD" />
-                    </svg>
-                </span>
-                <span class="arrow-next">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                          d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                          fill="#BDBDBD" />
-                    </svg>
-                </span>
-                <div class="sliderAuthors authors">
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_1.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Обучайтесь на любом удобном устройстве</h3>
-                                <p>Сообщество Smart Expert позволяет вам развиваться и обучаться в любом месте на удобном для вас устройстве: компьютер, телефон, планшет. Вы обязательно получите максимум приятных эмоций, и самое главное - эффективно
-                                    усвоите информацию и быстро перейдете к практическим действиям!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_2.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Групповая работа и поддержка окружения</h3>
-                                <p>Вся работа по обучающим проектам будет проходить в закрытой социальной сети, которая открывает вам:
-                                    <br>- новое окружение
-                                    <br>- контакты со специалистами
-                                    <br>- доступ к наставникам и кураторам
-                                    <br><br>
-                                    Вы легко сможете делиться идеями, получать идеи, вдохновляться и обсуждать их с другими участниками курса.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_3.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Инструмент создания личного бренда</h3>
-                                <p>Самое важное в XXI-веке - это Личный Бренд. Люди хотят работать с известными людьми. Компании хотят работать с известными людьми. Все - хотят быть рядом с тем, кто грамотно рассказывает о себе, своих навыках, своих
-                                    целях и планах на будущее. И все это - вы получаете в проекте Smart Expert!
-                                    <br><br>Оформите личный профиль в закрытой социальной сети, пишите экспертные статьи и публикуйте их на аудиторию более 2 млн человек. Это ваша возможность к быстрому Х-кратному росту! </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_4.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Коучи для поддержки и мотивации</h3>
-                                <p>Путь к изменениям и обретению новых навыков - тяжел и тернист. Для этого в процессе обучения вас будут сопровождать коучи, которые помогут справиться с трудностями, дадут “пендаль” мотивации и смогут вывести вас на
-                                    новый уровень.
-                                    <br><br>Поддержка коучей - один из важнейших элементов вашего роста над собой, развития и движению к новым целям. С ними - вы будете готовы действовать на максимум, несмотря на ограничения! </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 py-5 px-4">
-                        <div class="card_profile">
-                            <div class="icon">
-                                <img src="img/sec_lesson_steps/ic_5.svg" alt="">
-                            </div>
-                            <div class="text">
-                                <h3>Глобальный поиск экспертов</h3>
-                                <p>Хотите быстро получить профессиональную консультацию? Необходим проверенный эксперт для решения сложной задачи? Хотите с кем-то обсудить план своего путешествия? Глобальный поиск экспертов - позволит вам найти
-                                    специалиста в нужной области всего за 1 минуту!
-                                    <br><br>
-                                    Выбирайте направление, сортируйте по рейтингу - и перед вами появится список из лучших экспертов! </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_lesson_steps -->
-
     <section id="my-projects" class="sec sec_cost">
         <img alt="" class="abs_pic brain" src="img/abs_pic/brain.svg">
         <div class="container">
@@ -707,7 +604,7 @@
             </div>
             <div class="card">
                 <div class="media align-items-center">
-                    <img class="media-image" src="img/sec_cost/ic_1.svg" alt="Generic placeholder image">
+                    <img class="media-image" src="img/logo.svg" alt="Generic placeholder image">
                     <div class="media-body">
                         <h4 class="card_title">Онлайн-марафон "Контурная пластика губ"</h4>
                         <div class="b-card-body">
@@ -772,56 +669,6 @@
     </section>
     <!-- / sec_are_you_ready -->
 
-    <!-- sec_12 -->
-    <section id="ya_nastavnik" class="sec sec_12">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-md-3">
-                    <h4>Компания</h4>
-                    <ul>
-                        <li><a href="#tarifs">Цены</a></li>
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">База знаний</a></li>
-                        <li><a href="#" class="d-none">Пробная версия</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h4>Продукты</h4>
-                    <ul>
-                        <li><a href="#platforma_dlya_obuchenia">Платформа для онлайн-обучения</a></li>
-                        <li><a href="#marketing_instrument">Инструменты маркетинга</a></li>
-                        <li><a href="#prodvizhenie_lichnogo_brenda">Продвижение личного бренда</a></li>
-                        <li><a href="#globalnyi_poisk">Глобальный поиск экспертов</a></li>
-                        <li><a href="#delovaya_socialnaya_set">Деловая социальная сеть</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h4>Контактная информация</h4>
-
-                    <table class="table table-borderless">
-                        <tr>
-                            <td>Телефон</td>
-                            <td><a href="tel:380968827050">+380 96 882 70 50</a></td>
-                        </tr>
-                        <tr>
-                            <td>Мейл</td>
-                            <td><a href="mailto:office@smartexpert.net">office@smartexpert.net</a></td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <select class="form-control" id="lang">
-                            <option selected>Russian</option>
-                            <option>Ukraine</option>
-                            <option>Engish</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- / sec_12 -->
     <!-- footer -->
     <footer class="sec">
         <div class="container">
