--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                             </div>
                         </div>
                         <p class="undertitle">Как предложить своим пациентам самую востребованную инъекционную процедуру и сделать ее безопасно и уверенно?<br>
-                            Онлайн - марафон поможет Вам мгновенно внедрить полученные знания на практике. Вы расширите спектр услуг, привлечете новых пациентов и будете больше зарабатывать для своего дальнейшего развития и продвижения.</p>
+                            <!--  Онлайн - марафон поможет Вам мгновенно внедрить полученные знания на практике. Вы расширите спектр услуг, привлечете новых пациентов и будете больше зарабатывать для своего дальнейшего развития и продвижения.-->
+                        </p>
                     </div>
                     <div class="card">
                         <p>10 уроков, после которых Вы сможете удовлетворить любое пожелание пациента и сделать его образ гармоничным!
@@ -176,7 +177,10 @@
                 <div class="col-md-auto">
                     <div class="card card_txt">
                         <p>ОНЛАЙН - МАРАФОН «КОНТУРНАЯ ПЛАСТИКА ГУБ»<br>
-                            10 шагов к идеальной форме губ!
+                            10 шагов к идеальной форме губ! <br><br>
+                            10 уроков, после которых Вы сможете удовлетворить любое пожелание пациента и сделать его образ гармоничным!
+                            Онлайн-марафон «Контурная пластика губ» создан для начинающих косметологов и врачей, которые повышают свою квалификацию. Вы сможете предложить своим пациентам самую востребованную инъекционную процедуру, при этом,
+                            проведете её БЕЗОПАСНО и УВЕРЕННО. Вы станете профильным специалистом в контурной пластике губ, так как сможете работать со сложными пациентами, и это будет отличать Вас от других косметологов
                         </p>
                     </div>
                 </div>
@@ -515,7 +519,7 @@
                 <h2>Наши преимущества</h2>
                 <p>Вы получаете весь набор возможностей в одном месте:</p>
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="media">
                         <div class="icon"></div>
@@ -634,7 +638,7 @@
                 <h2>Отзывы участников</h2>
                 <p>Узнайте, что говорят о курсе участники, которые уже смогли <br> добиться результатов с помощью моих практик!</p>
             </div>
-            <div class="row justify-content-between">
+            <div class="row justify-content-center">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
