--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум I</i>
+                                <i>Урок 1</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
                                     <span>Анатомия губ</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -260,7 +260,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум II</i>
+                                <i>Урок 2</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_2" aria-expanded="true" aria-controls="collapse_2">
                                     <span>Эстетическая анатомия губ.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -278,7 +278,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум III</i>
+                                <i>Урок 3</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_3" aria-expanded="true" aria-controls="collapse_3">
                                     <span>Диагностика и методы коррекции проблем периоральной зоны.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -296,7 +296,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум IV</i>
+                                <i>Урок 4</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_4" aria-expanded="true" aria-controls="collapse_4">
                                     <span>Возможные методы коррекции губ помимо филлеров.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -314,7 +314,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум V</i>
+                                <i>Урок 5</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_5" aria-expanded="true" aria-controls="collapse_5">
                                     <span>Подробный разбор техник и методик контурной пластики белой и красной каймы губ</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -332,7 +332,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум VI</i>
+                                <i>Урок 6</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_6" aria-expanded="true" aria-controls="collapse_6">
                                     <span>Практический видео урок «Повторяй за мной»: первичная контурная пластика губ, создание естественного объёма.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -350,7 +350,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум VII</i>
+                                <i>Урок 7</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_7" aria-expanded="true" aria-controls="collapse_7">
                                     <span>Практический видео урок «Повторяй за мной»: техника коррекции асимметрии с сохранением природного объёма губ.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -368,7 +368,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум VIII</i>
+                                <i>Урок 8</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_8" aria-expanded="true" aria-controls="collapse_8">
                                     <span>Практический видео урок «Повторяй за мной»: отработка техники парижских губ.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -386,7 +386,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум IX</i>
+                                <i>Урок 9</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_9" aria-expanded="true" aria-controls="collapse_9">
                                     <span>Практический видео урок «Повторяй за мной»: коррекция возрастных изменений губ.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
@@ -404,7 +404,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2>
-                                <i>Практикум X</i>
+                                <i>Урок 10</i>
                                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_10" aria-expanded="true" aria-controls="collapse_10">
                                     <span>Практический видео урок «Повторяй за мной»: объёмное моделирование губ.</span><img src="img/sec_programm/arrow.svg" alt="">
                                 </button>
