--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#reviews">Отзывы</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#ya_nastavnik">Я - наставник</a>
-                </li>
+                </li> -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="https://p.smartexpert.net/login" class="btn btn-success-2 my-2 my-sm-0">Войти</a>
@@ -177,11 +177,18 @@
                 <div class="col-md-auto">
                     <div class="card card_txt">
                         <p>ОНЛАЙН - МАРАФОН «КОНТУРНАЯ ПЛАСТИКА ГУБ»<br>
-                            10 шагов к идеальной форме губ! <br><br>
-                            10 уроков, после которых Вы сможете удовлетворить любое пожелание пациента и сделать его образ гармоничным!
-                            Онлайн-марафон «Контурная пластика губ» создан для начинающих косметологов и врачей, которые повышают свою квалификацию. Вы сможете предложить своим пациентам самую востребованную инъекционную процедуру, при этом,
-                            проведете её БЕЗОПАСНО и УВЕРЕННО. Вы станете профильным специалистом в контурной пластике губ, так как сможете работать со сложными пациентами, и это будет отличать Вас от других косметологов
+                            10 шагов к идеальной форме губ! 
                         </p>
+                        <p>Какие результаты Вы получите после прохождения ОНЛАЙН-МАРАФОНА «Контурная пластика губ»</p>
+                        <p></p>
+                        <ul>
+                            <li>Усовершенствуете Ваши теоретические и практические навыки по контурной пластике губ</li>
+                            <li>Выявите свои слабые и сильные стороны в проведении инъекций</li>
+                            <li>Получите неограниченный доступ ко всем материалам, практическим видео, и будете просто повторять у себя в кабинете. </li>
+                            <li>Обменяетесь опытом с коллегами, вдохновитесь красивыми работами, интересными схемами коррекции асимметрии губ</li>
+                            <li>Увеличите охват Ваших страниц в социальных сетях (Facebook, Instagram), сделаете их более стильными, грамотными.</li>
+                            <li>Научитесь проводить процедуру контурной пластики губ идеально и быстро</li>
+                        </ul>
                     </div>
                 </div>
             </div>
