--- a/index.html
+++ b/index.html
@@ -544,15 +544,34 @@
                 <h2>Отзывы участников</h2>
                 <p>Узнайте, что говорят о курсе участники, которые уже смогли <br> добиться результатов с помощью моих практик!</p>
             </div>
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
-                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Сулима Инна</h3>
+                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                        <h3>Марина Чижова</h3>
                         <p>Косметолог</p>
-                        <i>“Добрый день, я участник марафона «Контурная пластика губ». От марафона получила максимум - улучшила свои теоретические и практические навыки. Огромное спасибо Алле Юрьевне за грамотное обучение -улучшили знания !(хотелось
-                            запомнить и повторить каждое движение), участникам марафона - за красивые работы и интересные схемы коррекции асимметрии губ( стимулировали к профессиональному совершенствованию) , организаторам марафона за качественный и
-                            современный доступ к обучающей информации. Буду рада поучаствовать в последующих марафонах! Желаю всем - Красоты,Процветания и Гармонии!”</i>
+                        <i>“Чижова Марина Анатольевна, участник марафона по контур ной пластике губ. Узнала очень много полезной информации, которая пригодится мне в дальнейшей работе. Алла Юрьевна, прирожденный преподаватель! Вежливая, отзывчивая,
+                            корректная. Всегда можно задать вопрос и получить ответ. В данном марафоне поэтапно разобрана зона губ, от анатомии, морфологии,правовой базы до практических занятий, в которых визуально показаны различные способы
+                            коррекции губ. Спасибо команде организаторов и отличному преподавателю!!! Жду следующие марафоны”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                        <h3>Татьяна Давыденко</h3>
+                        <p>Косметолог</p>
+                        <i>“Я,Давыденко Татьяна Алексеевна,участник марафона по контурной пластике губ,осталась очень довольна. Алла Юрьевна-прекрасный преподаватель,все очень доступно и понятно.для меня,как для практикующего косметолога,зона губ
+                            всегда оставалась до конца под вопросом,на данном марафоне были разъяснены все нюансы и особенности работы в периоральной области и зоне губ,причём не только филлерами,но и другими способами.спасибо Алле Юрьевне,а так же
+                            организаторам за прекрасную,слаженную работу)))обязательно запишусь на последующие марафоныи”</i>
+                    </div>
+                </div>
+                <div class="col-md-4 card_wrapp">
+                    <div class="card_profile">
+                        <div class="icon" style="background-image: url('img/sec_success_stories/');"></div>
+                        <h3>Еловикова Надежда</h3>
+                        <p>Косметолог</p>
+                        <i>“Очень понравилась система подачи информации,четко показаны схемы коррекции,вплоть до мм и количества вводимого препарата,по таким обучающим видео можно сразу инъецировать,используя подробные рекомендации,что мы и выполняли
+                            в процессе обучения,если возникали вопросы,разбирали с преподавателем в общем чате с фото и схемами коррекции!я буду рекомендовать онлайн марафон коллегам!!!”</i>
                     </div>
                 </div>
             </div>
