--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 <td>26</td>
                                 <td>26</td>
                                 <td>54</td>
-                                <td class="text-right"><a href="https://p.smartexpert.net/social/laflordenatalia" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://smartexpert.net/social/natashaflores" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                         </tbody>
                     </table>
