--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="card with-date">
                 <img alt="" class="abs_pic stone" src="img/abs_pic/stone_orange.svg">
                 <div class="media align-items-center">
-                    <img class="mr-md-3 media-image" src="img/logo.png" alt="Generic placeholder image">
+                    <img class="mr-md-3 media-image" src="img/sec_my_projects/logo.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <div class="date_wrap">
                             <div class="item">
